style(TaskItem): solve the problem that if the text is too long it may break the designed ui

--- a/src/components/TaskItems/TaskItem.css
+++ b/src/components/TaskItems/TaskItem.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    width: 54px;
 }
 
 .my-checkbox .circle {
@@ -112,6 +113,7 @@
 
 .finished {
     order: 1;
+    flex-shrink: 0;
     margin-right: 0;
     height: 64px;
     width: 54px;
@@ -122,7 +124,7 @@
 
 .titles {
     order: 2;
-    flex-grow: 1;
+    flex: 1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -130,6 +132,7 @@
 
 .favorite {
     order: 3;
+    flex-shrink: 0;
     margin-right: 10px;
 }
 
@@ -139,4 +142,18 @@
 
 .ion-accordion-completed .completed-header {
     background: transparent;
+}
+
+.task-item-title {
+    margin-bottom: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.task-item-subtitle {
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
